--- a/package.json
+++ b/package.json
@@ -1,5 +1,15 @@
 {
+  "name": "portfolio",
+  "homepage": "https://dnbsammie.github.io/Portfolio/",
+  "version": "1.0.0",
   "dependencies": {
     "framer-motion": "^12.5.0"
+  },
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   }
 }
