--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -6,14 +6,15 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist --no-history"
   },
   "dependencies": {
     "core-js": "^3.41.0",
     "framer-motion": "^12.9.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-ga4": "^2.1.0",
     "react-scripts": "^5.0.1",
     "recharts": "^2.15.1"
