--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -1,6 +1,7 @@
 {
   "name": "portfolio",
   "private": true,
+  "homepage": "https://dnbsammie.github.io/Portfolio/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -16,6 +17,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-ga4": "^2.1.0",
+    "react-router-dom": "^7.5.2",
     "react-scripts": "^5.0.1",
     "recharts": "^2.15.1"
   },
