--- a/portfolio/public/manifest.json
+++ b/portfolio/public/manifest.json
@@ -6,32 +6,32 @@
     "orientation": "portrait",
     "icons": [
         {
-            "src": "../src/assets/icons/favicon-16x16.png",
+            "src": "public/icons/favicon-16x16.png",
             "type": "image/png",
             "sizes": "16x16"
         },
         {
-            "src": "../src/assets/icons/favicon-32x32.png",
+            "src": "public/icons/favicon-32x32.png",
             "type": "image/png",
             "sizes": "32x32"
         },
         {
-            "src": "../src/assets/icons/favicon-64x64.png",
+            "src": "public/icons/favicon-64x64.png",
             "type": "image/png",
             "sizes": "64x64"
         },
         {
-            "src": "../src/assets/icons/favicon-128x128.png",
+            "src": "public/icons/favicon-128x128.png",
             "type": "image/png",
             "sizes": "128x128"
         },
         {
-            "src": "../src/assets/icons/favicon-256x256.png",
+            "src": "public/icons/favicon-256x256.png",
             "type": "image/png",
             "sizes": "256x256"
         },
         {
-            "src": "../src/assets/icons/favicon-512x512.png",
+            "src": "public/icons/favicon-512x512.png",
             "type": "image/png",
             "sizes": "512x512"
         }
