--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio",
   "private": true,
-  "homepage": "https://dnbsammie.github.io/Portfolio",
+  "homepage": "/Portfolio/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -31,6 +31,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "gh-pages": "^6.3.0",
     "globals": "^15.15.0",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "vite-plugin-pwa": "^1.0.0"
   }
 }
