--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -19,6 +19,7 @@
     "react-ga4": "^2.1.0",
     "react-router-dom": "^7.5.3",
     "react-scripts": "^5.0.1",
+    "react-scroll": "^1.9.3",
     "recharts": "^2.15.1"
   },
   "devDependencies": {
