--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build && node copy404.js",
+    "build": "vite build && node copy404.js && echo > dist/.nojekyll",
     "preview": "vite preview",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist --no-history"
